v 0.2.0 added tracking and geofences

--- a/settings/index.html
+++ b/settings/index.html
@@ -61,9 +61,9 @@
         <button id="delGeofence" onClick="deleteGeofence()"><i class="fa fa-trash-o"></i></button>&nbsp;
         | <span style="white-space:nowrap"><strong data-i18n="settings.geofences.labelShow">Weergave</strong>&nbsp;
           <input type="checkbox" id="showVehicles" onChange="showVehiclesChange()" checked> <span data-i18n="settings.geofences.optionVehicles"></span> &nbsp;
-          <input type="checkbox" id="showRouteStartPoints" onChange="showRouteStartPointsChange()" disabled> <span data-i18n="settings.geofences.optionStartPoints"></span> &nbsp;
-          <input type="checkbox" id="showRouteEndPoints" onChange="showRouteEndPointsChange()" disabled> <span data-i18n="settings.geofences.optionEndPoints"></span> &nbsp;
-          <input type="checkbox" id="showRoutes" onChange="showRoutesChange()" disabled> <span data-i18n="settings.geofences.optionRoutes"></span>
+          <input type="checkbox" id="showRouteStartPoints" onChange="showRouteStartPointsChange()"> <span data-i18n="settings.geofences.optionStartPoints"></span> &nbsp;
+          <input type="checkbox" id="showRouteEndPoints" onChange="showRouteEndPointsChange()"> <span data-i18n="settings.geofences.optionEndPoints"></span> &nbsp;
+          <input type="checkbox" id="showRoutes" onChange="showRoutesChange()"> <span data-i18n="settings.geofences.optionRoutes"></span>
         </span>
         <div id="map-canvas"></div>
       </fieldset>
